--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Cards</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body class="p-5">
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+    <div class="container">
+        <div class="d-flex gap-3"> 
+            <!-- First Card -->
+            <div class="card bg-light" style="width: 18rem;">
+                <div class="card-header">Welcome to Sync5</div>
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Sync5 Image">
+                <div class="card-body">
+                    <h5 class="card-title">New Features</h5>
+                    <p class="card-text">Mobile and Tablet support</p>
+                    <p class="card-text">With this new update you will be able to s
