--- a/main.html
+++ b/main.html
@@ -18,4 +18,27 @@
                 <div class="card-body">
                     <h5 class="card-title">New Features</h5>
                     <p class="card-text">Mobile and Tablet support</p>
-                    <p class="card-text">With this new update you will be able to s
+                    <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+                    <a href="#" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+
+            <!-- Second Card -->
+            <div class="card bg-warning text-dark" style="width: 18rem;">
+                <div class="card-header">Alert</div>
+                <img src="https://via.placeholder.com/150" class="card-img-top" alt="Alert Image">
+                <div class="card-body">
+                    <h5 class="card-title">Node Dead</h5>
+                    <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+                    <h5 class="card-title">President under Pressure</h5>
+                    <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+                    <p class="text-muted">Last updated 12 mins ago</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
