--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             </div>
 
             <!-- Second Card -->
-            <div class="card bg-warning text-dark" style="width: 18rem;">
+            <div class="card bg-danger text-light" style="width: 18rem;">
                 <div class="card-header">Alert</div>
                 <img src="https://via.placeholder.com/150" class="card-img-top" alt="Alert Image">
                 <div class="card-body">
